--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v3
         with:
-          terraform_version: 1.12.2
+          terraform_version: 1.12.2 #
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
@@ -28,13 +28,13 @@ jobs:
           aws-region: eu-west-1
 
       - name: Terraform Init
-        run: terraform init
+        run: cd terraform && terraform init
 
       - name: Terraform Format Check
-        run: terraform fmt -check
+        run: cd terraform && terraform fmt -check
 
       - name: Terraform Validate
-        run: terraform validate
+        run: cd terraform && terraform validate
 
       - name: Terraform Plan
-        run: terraform plan
+        run: cd terraform && terraform plan
