add 2nd creation bucket + terraform apply

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -35,3 +35,6 @@ jobs:
 
       - name: Terraform Plan
         run: cd terraform && terraform plan
+
+      - name: Terraform Apply
+        run: cd terraform && terraform apply
