--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -6,10 +6,15 @@ on:
   pull_request:
     branches: [ main ]
 
+# Reutilizamos las mismas configuraciones en todos los jobs
+defaults:
+  run:
+    working-directory: terraform
+
 jobs:
-  terraform:
-    name: Terraform Plan
-    runs-on: ubuntu-latest # ubuntu 22.04
+  init:
+    name: Terraform Init
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
@@ -18,7 +23,7 @@ jobs:
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v3
         with:
-          terraform_version: 1.12.2 #
+          terraform_version: 1.12.2
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
@@ -28,18 +33,71 @@ jobs:
           aws-region: eu-west-1
 
       - name: Terraform Init
-        run: cd terraform && terraform init
+        run: terraform init
+
+  validate:
+    name: Terraform Validate
+    runs-on: ubuntu-latest
+    needs: init
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: 1.12.2
+
+      - uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: eu-west-1
 
       - name: Terraform Validate
-        run: cd terraform && terraform validate
+        run: terraform validate
+
+  plan:
+    name: Terraform Plan
+    runs-on: ubuntu-latest
+    needs: validate
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: 1.12.2
+
+      - uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: eu-west-1
 
       - name: Terraform Refresh
-      # Este paso actualiza el estado de Terraform leyendo la configuración actual de los recursos en la nube.
-      # Ayuda a detectar 'drift' y a que Terraform sepa qué recursos ya existen y están gestionados.
-        run: cd terraform && terraform refresh
+        run: terraform refresh
 
       - name: Terraform Plan
-        run: cd terraform && terraform plan
+        run: terraform plan
+
+  apply:
+    name: Terraform Apply
+    runs-on: ubuntu-latest
+    needs: plan
+    if: github.ref == 'refs/heads/main'
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: 1.12.2
+
+      - uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: eu-west-1
 
       - name: Terraform Apply
-        run: cd terraform && terraform apply -auto-approve
+        run: terraform apply -auto-approve
