--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -6,15 +6,14 @@ on:
   pull_request:
     branches: [ main ]
 
-# Reutilizamos las mismas configuraciones en todos los jobs
-defaults:
-  run:
-    working-directory: terraform
-
 jobs:
-  init:
-    name: Terraform Init
+  terraform:
+    name: Terraform CI
     runs-on: ubuntu-latest
+
+    defaults:
+      run:
+        working-directory: terraform
 
     steps:
       - name: Checkout code
@@ -23,7 +22,7 @@ jobs:
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v3
         with:
-          terraform_version: 1.12.2
+          terraform_version: 1.5.7  # Usa una versión reciente y compatible con AWS provider 6.x
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
@@ -32,72 +31,23 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: eu-west-1
 
-      - name: Terraform Init
+      # --- INIT ---
+      - name: 🧱 Terraform Init
         run: terraform init
 
-  validate:
-    name: Terraform Validate
-    runs-on: ubuntu-latest
-    needs: init
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - uses: hashicorp/setup-terraform@v3
-        with:
-          terraform_version: 1.12.2
-
-      - uses: aws-actions/configure-aws-credentials@v2
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: eu-west-1
-
-      - name: Terraform Validate
+      # --- VALIDATE ---
+      - name: ✅ Terraform Validate
         run: terraform validate
 
-  plan:
-    name: Terraform Plan
-    runs-on: ubuntu-latest
-    needs: validate
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - uses: hashicorp/setup-terraform@v3
-        with:
-          terraform_version: 1.12.2
-
-      - uses: aws-actions/configure-aws-credentials@v2
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: eu-west-1
-
-      - name: Terraform Refresh
+      # --- REFRESH ---
+      - name: 🔄 Terraform Refresh
         run: terraform refresh
 
-      - name: Terraform Plan
+      # --- PLAN ---
+      - name: 📋 Terraform Plan
         run: terraform plan
 
-  apply:
-    name: Terraform Apply
-    runs-on: ubuntu-latest
-    needs: plan
-    if: github.ref == 'refs/heads/main'
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - uses: hashicorp/setup-terraform@v3
-        with:
-          terraform_version: 1.12.2
-
-      - uses: aws-actions/configure-aws-credentials@v2
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: eu-west-1
-
-      - name: Terraform Apply
+      # --- APPLY (solo en push a main) ---
+      - name: 🚀 Terraform Apply
+        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
         run: terraform apply -auto-approve
