--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -51,3 +51,38 @@ jobs:
       - name: 🚀 Terraform Apply
         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
         run: terraform apply -auto-approve
+
+    
+  terraform_destroy:
+    name: Terraform Destroy (Manual approval required)
+    runs-on: ubuntu-latest
+    needs: terraform
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    environment: 
+      name: destroy-approval  # Aquí pones el environment con required reviewers configurados
+
+    defaults:
+      run:
+        working-directory: terraform
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Terraform
+        uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: 1.5.7
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: eu-west-1
+
+      - name: 🧱 Terraform Init
+        run: terraform init
+
+      - name: ☠️ Terraform Destroy
+        run: terraform destroy -auto-approve
